[package]
name = "rustbellman"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustbellman"
# path = "src/rust/src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
bellman = "0.8"
