[package]
name = "rustbellman"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"

[lib]
name = "rustbellman"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
bellman = "0.10"
bls12_381 = "0.5"

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
# Dev-dependencies are not used when compiling a package for building, but are used for compiling tests, examples, and benchmarks.
[dev-dependencies]
ff = "0.10"
sha2 = "0.9.5"
rand = "0.8.4"